--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real-Time Skills Extraction</title>
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=3">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -18,11 +18,7 @@
 
         <main>
             <div class="editor-container">
-                <div class="backdrop">
-                    <div class="highlights" id="highlights"></div>
-                </div>
-                <textarea id="inputText"
-                    placeholder="Start typing job description or resume text... (Skills will be highlighted automatically)"></textarea>
+                <textarea id="inputText" placeholder="Start typing job description or resume text..."></textarea>
             </div>
             <div class="status-bar">
                 <div class="loader-container" id="loaderContainer">
@@ -38,7 +34,7 @@
         </main>
     </div>
 
-    <script src="script.js?v=2"></script>
+    <script src="script.js?v=3"></script>
 </body>
 
 </html>
